--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         createSkillListContent(selectedSkills, document.getElementById("selectedSkills"));
     }
     
-    fetch('data/skills.json')
+    fetch('/uma-tools/data/skills.json')
         .then(res => res.json())
         .then(data => {
             unselectedSkills = data;
